# $Id$

2009-01-19	Konstantin V. Arkhipov

	* meta/types/InetType.class.php: goes sizeless.

2009-01-17	Vladlen Y. Koshelev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php,
	test/misc/DAOTest.class.php: generate distinct count query in case of
	container's criteria is distinct; unified container count-tests added. 

2009-01-15	Vladlen Y. Koshelev

	* main/OQL/Expressions/OqlQueryParameter.class.php: "in" expression supports
	arrays.

2009-01-14	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: fisherYatesShuffle()
	Fisher Yates shuffle algorithm implementation.

	* core/Base/IntervalUnit.class.php,
	core/OSQL/TimeIntervalsGenerator: support Date/DateRange types.

2009-01-10	Vladlen Y. Koshelev

	* main/OQL/Parsers/OqlTokenizer.class.php: tokenizer simplified and
	optimized using non-multibyte functions and regexps where it's possible.

2009-01-07	Vladlen Y. Koshelev

	* main/OQL/, test/main/OqlSelectClauseTest.class.php: OQL select query
	clauses separated from OQL query as independent parsers and wrappers,
	so they can be used both in Criteria statements (expressions, projections,
	etc.) and for incremental expansion of OQL query; corresponding tests
	demonstrates such cases.

	* main/OQL/Expressions/OqlQueryExpression.class.php: classes reflections
	pool added.

2008-12-31	Konstantin V. Arkhipov

	* 1.0.8 released.

2008-12-30	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php,
	core/Form/Primitives/IdentifiablePrimitive.class.php: casting magic
	moved from PrimitiveEnumeration to it's parent; this one fixes
	non-integer identifiers in PrimitiveIdentifier.

2008-12-30	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php,
	test/core/PrimitiveIdentifierTest.class.php: import handling for empty or
	non-integer values and test for empty values added.

	* main/DAOs/GenericDAO.class.php: check if identifier is scalar.

2008-12-29	Ivan Y. Khvostishkov
